# goit-pyweb-hw-10

./: pyproject.toml
hw_10/: .env
hw_10/app_auth/: forms.py  urls.py
hw_10/app_auth/templates/app_auth/: login.html  logout.html  password_reset_complete.html  password_reset_email.html  register.html
hw_10/hw_10/: new_pass.py
hw_10/quotes/: add_quote_form.py  urls.py  utils.py
hw_10/quotes/static/quotes/: style.css
hw_10/quotes/templates/quotes/: about_author.html  add_quote.html  base.html  index.html
hw_10/quotes/templatetags/: extract.py  form_tags.py
hw_10/utils/: add_quotes_to_mongo.py
