[tool.poetry]
name = "goit-pyweb-hw-10"
version = "0.1.0"
description = ""
authors = ["Anton Vasyliev <anton12vasyliev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
pymongo = {extras = ["srv", "tls"], version = "^4.10.1"}
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
